--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "boxicons": "^2.1.4",
+    "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
