--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "boxicons": "^2.1.4",
-    "firebase": "^12.4.0",
+    "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.4",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
