--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "boxicons": "^2.1.4",
     "firebase": "^10.13.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
